# sea_battle

backend/: .env.example  .gitignore  README.md  makefile  pyproject.toml
backend/deploy/: backend.toml
backend/src/: config.py  main.py
backend/src/application/: handle_update.py
backend/src/application/common/: gateways.py  usecase.py
backend/src/infra/: log.py
backend/src/infra/postgres/: gateways.py  models.py
backend/src/infra/redis/: models.py
backend/src/main/: __main__.py  di.py  socketio.py  telegram.py  web.py
backend/src/presentation/fastapi/: exception_handlers.py  setup.py
backend/src/presentation/fastapi/routes/: bot.py
backend/src/presentation/socketio/: di.py  namespace.py
frontend/ref/: ref.html  style.css
frontend/src/Components/: LoginModal.tsx  Statistics.tsx
frontend/src/Components/Field/: Cell.tsx  Field.tsx
frontend/src/Components/Field/img/: cross.tsx  fire.tsx  ship.tsx  skull.tsx
frontend/src/Models/: Game.store.ts  Root.ts  SeaBattle.store.ts  User.store.ts  types.ts  types.tsx
frontend/src/Models/SocketIO/: Hooks.ts
frontend/src/Pages/: MainPage.tsx
