[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-socketio = {extras = ["asyncio-client"], version = "^5.11.1"}
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
adaptix = "^3.0.0b1"
dishka = "^0.2.0"
aiogram = "^3.3.0"
structlog = "^24.1.0"
sqlalchemy = "^2.0.27"
redis = "<5.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
